--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "git.ignoreLimitWarning": true,
-    "cmake.sourceDirectory": "/home/qinchao/cassobee/",
 
     // [[General]]
     "breadcrumbs.filePath": "on", // 控制是否及如何在“导航路径”视图中显示文件路径
@@ -41,7 +40,7 @@
     "workbench.iconTheme": "vs-seti",
     "workbench.colorTheme": "Default Dark Modern",
     "workbench.view.alwaysShowHeaderActions": true, // 显示视图头部的操作项
-    "workbench.settings.editor": "json", // 默认打开 settings.json 进行设置
+    "workbench.settings.editor": "ui", // 默认打开 settings.json 进行设置
     "workbench.editor.historyBasedLanguageDetection": true, // 允许语言检测使用编辑器历史记
 
     // debug
@@ -130,31 +129,22 @@
         "param": "", // param 开启函数参数自动提取 需要将光标放在函数行或者函数上方的空白行
         "return": "",
     },
-    // "fileheader.customMade": {
-    //     "Author": "cassobee",
-    //     "Date": "",
-    //     "LastEditors": "",
-    //     "LastEditTime": "",
-    //     "Description": "",
-    // },
-
-    // [[XMake]]
-    "xmake.debugConfigType": "codelldb", // 使用 codelldb 插件而非 cpptools 进行调试
-    "xmake.runMode": "buildRun", // 运行前自动 build
-    "xmake.buildLevel": "verbose", // 设置编译时输出信息级别,默认是warnings级别,仅输出编译警告信息以及正常信息,verbose级别输出完整的编译命令行参数,debug级别对应 xmake -vD 的诊断信息，会打印出错的栈信息
-    "xmake.customDebugConfig": {
-        "console": "integratedTerminal" // XMake调试时使用集成终端而非 debug console,也可以使用 externalTerminal
+    "fileheader.customMade": {
+        "Author": "cassobee",
+        "Date": "",
+        "LastEditors": "",
+        "LastEditTime": "",
+        "Description": "",
     },
 
     // [[C++]]
     // clangd
-    "clangd.path": "/home/qinchao/.vscode-server/data/User/globalStorage/llvm-vs-code-extensions.vscode-clangd/install/17.0.3/clangd_17.0.3/bin/clangd", // clangd 路径
     // Clangd 运行参数(终端输入 clangd --help-list-hidden 可查看更多)
     "clangd.arguments": [
         "--all-scopes-completion", // 全局补全(补全建议会给出在当前作用域不可见的索引,插入后自动补充作用域标识符),例如在main()中直接写cout,即使没有`#include <iostream>`,也会给出`std::cout`的建议,配合"--header-insertion=iwyu",还可自动插入缺失的头文件
         "--background-index", // 后台分析并保存索引文件
         "--clang-tidy", // 启用 Clang-Tidy 以提供「静态检查」
-        "--clang-tidy-checks=performance-*, bugprone-*, misc-*, google-*, modernize-*, readability-*, portability-*",
+        //"--clang-tidy-checks=performance-*, bugprone-*, misc-*, google-*, modernize-*, readability-*, portability-*",
         "--compile-commands-dir=${workspaceFolder}/build", // 编译数据库(compile_commands.json 文件)的目录位置
         "--completion-parse=auto", // 当 clangd 准备就绪时，用它来分析建议
         "--completion-style=detailed", // 建议风格：打包(重载函数只会给出一个建议);还可以设置为 detailed
@@ -162,8 +152,8 @@
         // 启用配置文件(YAML格式)项目配置文件是在项目文件夹里的“.clangd”,用户配置文件是“clangd/config.yaml”,该文件来自:Windows: %USERPROFILE%\AppData\Local || MacOS: ~/Library/Preferences/ || Others: $XDG_CONFIG_HOME, usually ~/.config
         "--enable-config",
         "--fallback-style=Webkit", // 默认格式化风格: 在没找到 .clang-format 文件时采用,可用的有 LLVM, Google, Chromium, Mozilla, Webkit, Microsoft, GNU
-        "--function-arg-placeholders=true", // 补全函数时，将会给参数提供占位符，键入后按 Tab 可以切换到下一占位符，乃至函数末
-        "--header-insertion-decorators", // 输入建议中，已包含头文件的项与还未包含头文件的项会以圆点加以区分
+        //"--function-arg-placeholders", // 补全函数时，将会给参数提供占位符，键入后按 Tab 可以切换到下一占位符，乃至函数末
+        //"--header-insertion-decorators", // 输入建议中，已包含头文件的项与还未包含头文件的项会以圆点加以区分
         "--header-insertion=iwyu", // 插入建议时自动引入头文件 iwyu
         //"--include-cleaner-stdlib", // 为标准库头文件启用清理功能(不成熟!!!)
         "--log=verbose", // 让 Clangd 生成更详细的日志
@@ -174,27 +164,6 @@
     ],
     // 找不到编译数据库(compile_flags.json 文件)时使用的编译器选项,这样的缺陷是不能直接索引同一项目的不同文件,只能分析系统头文件、当前文件和被include的文件
     "clangd.fallbackFlags": [
-        "-pedantic",
-        "-Wall",
-        "-Wextra",
-        "-Wcast-align",
-        "-Wdouble-promotion",
-        "-Wformat=2",
-        "-Wimplicit-fallthrough",
-        "-Wmisleading-indentation",
-        "-Wnon-virtual-dtor",
-        "-Wnull-dereference",
-        "-Wold-style-cast",
-        "-Woverloaded-virtual",
-        "-Wpedantic",
-        "-Wshadow",
-        "-Wunused",
-        "-pthread",
-        "-fuse-ld=lld",
-        "-fsanitize=address",
-        "-fsanitize=undefined",
-        "-stdlib=libc++",
-        //"-std=c++20",
     ],
     "clangd.checkUpdates": true, // 自动检测 clangd 更新
     "clangd.onConfigChanged": "restart", // 重启 clangd 时重载配置,具体方法: F1 + Fn 打开命令面板，然后搜索“clangd: restart"
@@ -202,21 +171,10 @@
     "clangd.detectExtensionConflicts": true, // 当其它拓展与 clangd 冲突时警告并建议禁用
     "editor.suggest.snippetsPreventQuickSuggestions": false, // clangd的snippets有很多的跳转点，不用这个就必须手动触发Intellisense了
 
-    // [[LLDB]]
-    // "lldb.commandCompletions": true, // LLDB 指令自动补全
-    // "lldb.dereferencePointers": true, // LLDB 指针显示解引用内容
-    // "lldb.evaluateForHovers": true, // LLDB 鼠标悬停在变量上时预览变量值
-    // "lldb.launch.expressions": "native", // LLDB 监视表达式的默认类型
-    // "lldb.showDisassembly": "never", // LLDB 不显示汇编代码
-    // "lldb.verboseLogging": true,
     // [[Python]]
     "[python]": {
         "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
     },
     "python.venvPath": "~/Code/python/pyvenvs", // Python 虚拟环境所在路径
     "python.analysis.typeCheckingMode": "basic",
-
-    // [[Haskell]]
-    // "haskell.ghcupExecutablePath": "C:/ghcup/bin/ghcup.exe",
-    // "haskell.manageHLS": "GHCup",
 }
