--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -1,5 +1,6 @@
 [threadpool]
 groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4)
+issteal = true
 
 [timer]
 interval = 50
