--- a/config/logserver.conf
+++ b/config/logserver.conf
@@ -1,5 +1,5 @@
 [threadpool]
-groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4)
+groups = (524288, 4)
 
 [timer]
 interval = 50
