--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -1,6 +1,6 @@
 [threadpool]
 groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4)
-issteal = true
+issteal = false
 
 [timer]
 interval = 50
