--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -18,6 +18,7 @@ pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
 [logserver]
 socktype = tcp
 version = 4
+address = 127.0.0.1
 port = 8880
 read_buffer_size = 4194304
 write_buffer_size = 4194304
@@ -25,6 +26,7 @@ write_buffer_size = 4194304
 [client]
 socktype = tcp
 version = 4
+address = 127.0.0.1
 port = 8888
 read_buffer_size = 4194304
 write_buffer_size = 4194304
