--- a/config/client.conf
+++ b/config/client.conf
@@ -17,6 +17,7 @@ pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
 [logserver]
 socktype = tcp
 version = 4
+address = 127.0.0.1
 port = 8880
 read_buffer_size = 4194304
 write_buffer_size = 4194304
@@ -24,6 +25,7 @@ write_buffer_size = 4194304
 [server]
 socktype = tcp
 version = 4
+address = 127.0.0.1
 port = 8888
 read_buffer_size = 4194304
 write_buffer_size = 4194304
