--- a/config/logserver.conf
+++ b/config/logserver.conf
@@ -22,6 +22,7 @@ threshold = 4096
 [logclient]
 socktype = tcp
 version = 4
+address = 127.0.0.1
 port = 8880
 read_buffer_size = 4194304
 write_buffer_size = 4194304
