--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -23,6 +23,9 @@ port = 8880
 read_buffer_size = 4194304
 write_buffer_size = 4194304
 
+[db]
+path = debug/dbdata/
+
 [client]
 socktype = tcp
 version = 4
