调整项目结构

--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -23,8 +23,17 @@ port = 8880
 read_buffer_size = 4194304
 write_buffer_size = 4194304
 
-[db]
-path = debug/dbdata/
+[mysql]
+user = root
+password = 123456
+host = 127.0.0.1
+port = 3306
+db = cassobee
+charset = utf8
+minsize = 10
+maxsize = 100
+timeout = 1000
+max_idle_time = 300
 
 [client]
 socktype = tcp
