--- a/source/client/CMakeLists.txt
+++ b/source/client/CMakeLists.txt
@@ -1,10 +1,17 @@
 # client exe
 
-set(CLIENT_DEPEND_LIB bee log security prot cli)
+file(GLOB_RECURSE CLIENT_SRC ${SOURCE_PATH}/client/*.cpp)
+file(GLOB_RECURSE CLIENT_SRC ${SOURCE_PATH}/logclient/*.cpp)
 
-add_executable(client client.cpp)
-add_dependencies(client ${CLIENT_DEPEND_LIB})
-target_link_libraries(client pthread ${CLIENT_DEPEND_LIB})
+add_executable(client ${CLIENT_SRC} ${LOGCLIENT_SRC})
+
+target_include_directories(client
+                           PRIVATE
+                           ${SOURCE_PATH}/client/network
+                           ${SOURCE_PATH}/client
+                           ${SOURCE_PATH}/logclient
+)
+target_link_libraries(client pthread bee)
 
 add_common_flags(client)
 gen_startup_script(client)
