--- a/source/bee/database/CMakeLists.txt
+++ b/source/bee/database/CMakeLists.txt
@@ -1,10 +1,10 @@
-# libdatabase
-file(GLOB LIBDATABASE_SRC ${SOURCE_PATH}/bee/database/*.cpp)
-message("libdatabase source: " ${LIBDATABASE_SRC})
-add_library(database SHARED ${LIBDATABASE_SRC})
-target_include_directories(database
+# libcmysql
+set(LIBCMYSQL_SRC cmysql.cpp)
+message("libcmysql source: " ${LIBCMYSQL_SRC})
+add_library(cmysql SHARED ${LIBCMYSQL_SRC})
+target_include_directories(cmysql
                            PUBLIC
-                           ${SOURCE_PATH}/bee/database
+                           ${SOURCE_PATH}/bee/database/
                            PRIVATE
                            ${SOURCE_PATH}/bee/common
                            ${SOURCE_PATH}/bee/io
@@ -15,5 +15,7 @@ target_include_directories(database
                            ${SOURCE_PATH}/protocol
                            ${SOURCE_PATH}/protocol/include
 )
-#target_link_libraries(database ${LIBMYSQLCPPCONN_PATH})
-target_link_libraries(database mysqlcppconn)
+
+target_link_libraries(cmysql mysqlcppconn)
+
+add_common_flags(cmysql)
