--- a/source/casso/CMakeLists.txt
+++ b/source/casso/CMakeLists.txt
@@ -1,17 +1,18 @@
 # cassobee exe
-set(CASSOBEE_DEPEND_LIB bee log security prot)
 
 file(GLOB_RECURSE CASSOBEE_SRC ${SOURCE_PATH}/casso/*.cpp)
+file(GLOB_RECURSE CASSOBEE_SRC ${SOURCE_PATH}/logclient/*.cpp)
 
-add_executable(cassobee main.cpp)
+add_executable(cassobee ${CASSOBEE_SRC} ${LOGCLIENT_SRC})
 
 target_include_directories(cassobee
                            PRIVATE
                            ${SOURCE_PATH}/casso/network
+                           ${SOURCE_PATH}/logclient
 )
 
-add_dependencies(cassobee ${CASSOBEE_DEPEND_LIB})
-target_link_libraries(cassobee pthread ${CASSOBEE_DEPEND_LIB})
+target_link_libraries(cassobee pthread bee prot)
 
 add_common_flags(cassobee)
+
 gen_startup_script(cassobee)
