--- a/source/casso/CMakeLists.txt
+++ b/source/casso/CMakeLists.txt
@@ -1,17 +1,17 @@
 # cassobee exe
 
 file(GLOB_RECURSE CASSOBEE_SRC ${SOURCE_PATH}/casso/*.cpp)
-file(GLOB_RECURSE CASSOBEE_SRC ${SOURCE_PATH}/logclient/*.cpp)
 
-add_executable(cassobee ${CASSOBEE_SRC} ${LOGCLIENT_SRC})
+add_executable(cassobee ${CASSOBEE_SRC})
 
 target_include_directories(cassobee
                            PRIVATE
                            ${SOURCE_PATH}/casso/network
-                           ${SOURCE_PATH}/logclient
 )
 
-target_link_libraries(cassobee pthread bee prot)
+target_compile_definitions(bee_r PRIVATE -D_REENTRANT)
+
+target_link_libraries(cassobee pthread bee_r logclient prot)
 
 add_common_flags(cassobee)
 
