--- a/source/client/CMakeLists.txt
+++ b/source/client/CMakeLists.txt
@@ -1,17 +1,16 @@
 # client exe
 
 file(GLOB_RECURSE CLIENT_SRC ${SOURCE_PATH}/client/*.cpp)
-file(GLOB_RECURSE CLIENT_SRC ${SOURCE_PATH}/logclient/*.cpp)
 
-add_executable(client ${CLIENT_SRC} ${LOGCLIENT_SRC})
+add_executable(client ${CLIENT_SRC})
 
 target_include_directories(client
                            PRIVATE
                            ${SOURCE_PATH}/client/network
                            ${SOURCE_PATH}/client
-                           ${SOURCE_PATH}/logclient
 )
-target_link_libraries(client pthread bee)
+target_link_libraries(client pthread bee logclient)
 
 add_common_flags(client)
+
 gen_startup_script(client)
