--- a/source/bee/cli/CMakeLists.txt
+++ b/source/bee/cli/CMakeLists.txt
@@ -4,7 +4,8 @@ message("libcli source: " ${LIBCLI_SRC})
 add_library(cli SHARED ${LIBCLI_SRC})
 target_include_directories(cli
                            PUBLIC
-                           
+                           ${THIRDPARTY_PATH}/readline
+                           ${THIRDLIB_OUTPUT_PATH}/readline/include
                            ${SOURCE_PATH}/bee/cli
                            PRIVATE
                            ${SOURCE_PATH}/bee/common
