--- a/source/bee/CMakeLists.txt
+++ b/source/bee/CMakeLists.txt
@@ -27,6 +27,7 @@ set(BEE_PUBLIC_INCLUDES ${SOURCE_PATH}/bee/common
                         ${SOURCE_PATH}/bee/security
                         ${SOURCE_PATH}/bee/cli
                         ${SOURCE_PATH}/bee/database
+                        ${SOURCE_PATH}/bee/http
                         ${SOURCE_PATH}/protocol
                         ${SOURCE_PATH}/protocol/include
 )
