namespace bee, sslio_event

--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -43,5 +43,19 @@ port = 8888
 read_buffer_size = 4194304
 write_buffer_size = 4194304
 
+[httpsession_manager]
+ssl_enabled = true
+cert_file = /path/to/cert.pem
+key_file = /path/to/key.pem
+keepalive_timeout = 30000  # 30秒
+max_requests = 1000        # 每个连接最大请求数
+read_buffer_size = 16384   # 16KB
+write_buffer_size = 32768  # 32KB
 
+[traffic_shaper]
+global_rate = 10485760 # 10MB/s
+per_connection_rate = 1048576 # 1MB/s
 
+[websocket]
+max_frame_size = 16777216 # 16MB
+ping_interval = 30000 # 30秒
