--- a/source/client/CMakeLists.txt
+++ b/source/client/CMakeLists.txt
@@ -7,9 +7,11 @@ add_executable(client ${CLIENT_SRC})
 target_include_directories(client
                            PRIVATE
                            ${SOURCE_PATH}/client/network
-                           ${SOURCE_PATH}/client
 )
-target_link_libraries(client pthread bee logclient)
+
+target_compile_definitions(client PRIVATE -D_REENTRANT)
+
+target_link_libraries(client pthread bee_r logclient)
 
 add_common_flags(client)
 
