--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,5 +13,8 @@ sonar.cxx.file.suffixes=.cxx,.cpp,.cc,.c,.hxx,.h,.hh,.hpp,.handled
 # clang-tidy 报告路径
 sonar.cxx.clangtidy.reportPaths=debug/clang-tidy-report.txt
 
+# iwyu 报告路径
+sonar.cxx.iwyu.reportPath=debug/iwyu_report.json
+
 #include path
 #sonar.cxx.includeDirectories=/usr/include,/usr/include/c++/9
