--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -51,3 +51,4 @@ keepalive_timeout = 30000  # 30秒
 max_requests = 1000        # 每个连接最大请求数
 read_buffer_size = 16384   # 16KB
 write_buffer_size = 32768  # 32KB
+request_timeout = 5000     # 5秒      
