--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -45,10 +45,11 @@ write_buffer_size = 4194304
 
 [httpsession_manager]
 ssl_enabled = true
-cert_file = /path/to/cert.pem
-key_file = /path/to/key.pem
+ssl_server = true
+cert_file = config/ssl/cert.pem
+key_file = config/ssl/key.pem
 keepalive_timeout = 30000  # 30秒
 max_requests = 1000        # 每个连接最大请求数
 read_buffer_size = 16384   # 16KB
 write_buffer_size = 32768  # 32KB
-request_timeout = 5000     # 5秒      
+request_timeout = 5000     # 5秒
