--- a/source/logclient/CMakeLists.txt
+++ b/source/logclient/CMakeLists.txt
@@ -6,16 +6,21 @@ set(LOGCLIENT_SRC ${LOGCLIENT_SRC}
 )
 message("logclient source: " ${LOGCLIENT_SRC})
 
-add_library(logclient SHARED ${LOGCLIENT_SRC})
+add_library(logclient   SHARED ${LOGCLIENT_SRC})
+add_library(logclient_r SHARED ${LOGCLIENT_SRC})
 
-target_include_directories(logclient
-                           PUBLIC
-                           ${SOURCE_PATH}/logclient
-                           PRIVATE
-                           ${SOURCE_PATH}/protocol
-                           ${SOURCE_PATH}/protocol/include
+set(LOGCLIENT_PUBLIC_INCLUDES ${SOURCE_PATH}/logclient)
+
+set(LOGCLIENT_PRIVATE_INCLUDES ${SOURCE_PATH}/protocol
+                               ${SOURCE_PATH}/protocol/include
 )
 
-target_link_libraries(logclient PRIVATE bee)
+target_include_directories(logclient   PUBLIC   ${LOGCLIENT_PUBLIC_INCLUDES} PRIVATE ${LOGCLIENT_PRIVATE_INCLUDES})
+target_include_directories(logclient_r PUBLIC ${LOGCLIENT_PUBLIC_INCLUDES} PRIVATE ${LOGCLIENT_PRIVATE_INCLUDES})
+
+target_link_libraries(logclient   PRIVATE bee)
+target_link_libraries(logclient_r PRIVATE bee_r)
+
+target_compile_definitions(logclient_r PRIVATE -D_REENTRANT)
 
 #add_common_flags(logclient)
