--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -1,5 +1,5 @@
 [threadpool]
-groups = (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4), (524288, 4)
+groups = (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1)
 issteal = false
 
 [timer]
@@ -13,6 +13,7 @@ timeout = 1000
 
 [log]
 loglevel = 0
+asynclog = false
 pattern = [%d{%Y-%m-%d %H:%M:%S}]%T[%p]%T[%c]%T%t%T%f:%l: %m%n
 
 [logserver]
