--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -45,7 +45,7 @@ read_buffer_size = 4194304
 write_buffer_size = 4194304
 
 [httpsession_manager]
-ssl_enabled = true
+ssl_enabled = false
 ssl_server = true
 cert_file = config/ssl/cert.pem
 key_file = config/ssl/key.pem
