--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -1,6 +1,6 @@
 [threadpool]
 groups = (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1)
-issteal = false
+issteal = true
 
 [timer]
 interval = 50
