--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(cassobee LANGUAGES CXX)
 message("Use ${CMAKE_CXX_COMPILER_ID} compiler to build this project.")
 
 set(CASSOBEE_ROOT_PATH      ${CMAKE_CURRENT_SOURCE_DIR})
-set(BUILD_PATH             ${CMAKE_CURRENT_SOURCE_DIR}/build)
+set(BUILD_PATH              ${CMAKE_CURRENT_SOURCE_DIR}/build)
 set(CONFIG_PATH             ${CASSOBEE_ROOT_PATH}/config)
 set(SOURCE_PATH             ${CASSOBEE_ROOT_PATH}/source)
 set(THIRDPARTY_PATH         ${CASSOBEE_ROOT_PATH}/thirdparty)
@@ -30,6 +30,7 @@ option(CASSOBEE_SENITIZE_ENABLE "enable google sanitizer" ON)
 option(CASSOBEE_CCACHE_ENABLE "enable ccache" ON)
 option(CASSOBEE_CLANG_TIDY_ENABLE "enable clang-tidy" OFF)
 option(CASSOBEE_COMPILE_TIME_REPORT_ENABLE "enable compile time report" OFF)
+option(CASSOBEE_REFLECTION_ENABLE "enable refletion generation" OFF)
 
 set(CMAKE_BUILD_TYPE Debug)
 #set(CMAKE_BUILD_TYPE Release)
