--- a/config/client.conf
+++ b/config/client.conf
@@ -1,5 +1,5 @@
 [threadpool]
-groups = (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1)
+groups = (524288, 4), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1), (524288, 1)
 
 [timer]
 interval = 50
