--- a/config/cassobee.conf
+++ b/config/cassobee.conf
@@ -44,7 +44,7 @@ port = 8888
 read_buffer_size = 4194304
 write_buffer_size = 4194304
 
-[httpsession_manager]
+[httpclient_manager]
 ssl_enabled = false
 ssl_server = true
 cert_file = config/ssl/cert.pem
